--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "django-bootstrap5>=25.1",
     "django-extensions>=4.1",
     "python-dotenv>=1.1.0",
+    "rollbar>=1.3.0",
 ]
 
 [dependency-groups]
