--- a/.github/workflows/test-check.yml
+++ b/.github/workflows/test-check.yml
@@ -7,7 +7,6 @@ on:
 env:
   PYTHON_VERSION: "3.11"
   POSTGRES_VERSION: "15"
-  UV_VERSION: "0.1.0"
 
 jobs:
   test-and-sonar:
@@ -43,7 +42,7 @@ jobs:
       - name: Make build.sh executable
         run: chmod +x build.sh
 
-      - name: Install dep
+      - name: Install dependencies
         run: |
           make build
 
@@ -55,10 +54,13 @@ jobs:
           done
 
       - name: Run linter ruff
-        run: make lint
+        run: |
+          source .venv/bin/activate
+          make lint
 
       - name: Run tests with coverage
         run: |
+          source .venv/bin/activate
           make test
           make test-coverage
 
