--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "django>=5.2",
     "django-bootstrap5>=25.1",
     "django-extensions>=4.1",
+    "django-filter>=25.1",
     "python-dotenv>=1.1.0",
     "rollbar>=1.3.0",
 ]
