Stage 6.3.3 fix workflows test_check

--- a/.github/workflows/test-check.yml
+++ b/.github/workflows/test-check.yml
@@ -77,3 +77,4 @@ jobs:
             -Dsonar.exclusions=**/migrations/**,**/tests/**,**/static/**
             -Dsonar.tests=tests
             -Dsonar.python.version=${{ env.PYTHON_VERSION }}
+            -Dsonar.ci.autoconfig.disabled=true
