--- a/.github/workflows/test-check.yml
+++ b/.github/workflows/test-check.yml
@@ -78,3 +78,4 @@ jobs:
             -Dsonar.tests=tests
             -Dsonar.python.version=${{ env.PYTHON_VERSION }}
             -Dsonar.ci.autoconfig.disabled=true
+            -Dsonar.ci.skip=false
