--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,3 +2,5 @@ sonar.projectKey=<Mirroel-Alvares_python-project-52>
 sonar.organization=<mirroel-alvares>
 sonar.projectName=python-project-52
 sonar.python.version=3.11
+
+sonar.sources=python-project-52/main, python-project-52/labels, python-project-52/
