--- a/task_manager/fixtures/tasks_td.json
+++ b/task_manager/fixtures/tasks_td.json
@@ -7,7 +7,7 @@
         "description": "Some description",
         "status": 2,
         "author": 1,
-        "performer": 2,
+        "executor": 2,
         "labels": [1, 2],
         "created_at": "2025-05-16T01:00:00Z"
       }
@@ -20,7 +20,7 @@
         "description": "Another description",
         "status": 1,
         "author": 2,
-        "performer": 1,
+        "executor": 1,
         "labels": [],
         "created_at": "2025-05-17T02:00:00Z"
       }
